--- a/Kompose/app/src/main/res/values/strings.xml
+++ b/Kompose/app/src/main/res/values/strings.xml
@@ -18,10 +18,10 @@
 
     <!--Settings-->
     <string name="settings_category_title">General</string>
-    <string name="setting_port_client_title">Port to use when acting as a Client</string>
-    <string name="setting_port_client_desc">Port when Connecting</string>
-    <string name="setting_port_host_title">Port to use when acting as a Host</string>
-    <string name="setting_port_host_desc">Port when Hosting</string>
+    <string name="setting_port_client_title">Port when Connecting</string>
+    <string name="setting_port_client_desc">Port when Connecting (0 for random port)</string>
+    <string name="setting_port_host_title">Port when Hosting</string>
+    <string name="setting_port_host_desc">Port when Hosting (0 for random port)</string>
     <string name="setting_preload_title">Preload Size in #Songs</string>
     <string name="setting_preload_desc">Number of Songs to Preload</string>
     <string name="setting_maxdl_title">Maximum Download Size in MB</string>
@@ -42,6 +42,7 @@
     <string name="view_error_host_services">Host services could not be set up properly</string>
     <string name="view_error_client_services">Client services could not be set up properly</string>
     <string name="view_error_sharing">Kompose is not connected to a host!</string>
+    <string name="view_error_filedownload_failed">File download failed. Make sure your download size limit isn\'t set too low!</string>
 
     <!-- Android Developer Icons -->
     <string name="icons_ai_halt">\ue874</string>
